# AimBuddy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/: .gitkeep
app/src/main/cpp/: CMakeLists.txt  esp_jni.cpp  settings.h
app/src/main/cpp/aimbot/: aimbot_controller.cpp  aimbot_controller.h  target_tracker.cpp  target_tracker.h
app/src/main/cpp/capture/: frame_buffer.h
app/src/main/cpp/detector/: bounding_box.h  yolo_detector.cpp  yolo_detector.h
app/src/main/cpp/imgui/: imconfig.h  imgui.h  imgui_impl_android.cpp  imgui_impl_android.h
app/src/main/cpp/input/: touch_helper.cpp  touch_helper.h
app/src/main/cpp/renderer/: box_smoothing.h  esp_renderer.cpp  esp_renderer.h  imgui_menu.cpp  overlay_window.cpp  overlay_window.h
app/src/main/cpp/utils/: aimbot_types.h  detection_zone.h  imgui_helper.h  logger.h  memory_pool.h  thread.h  timer.h  vector2.h
app/src/main/java/com/aimbuddy/: ImGuiGLSurface.kt  MainActivity.kt  RootUtils.kt  ScreenCaptureService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: Architecture.md  Performance.md  SettingsGuide.md  Training.md  Troubleshooting.md
gradle/wrapper/: gradle-wrapper.properties
site/: _config.yml  index.html
site/assets/css/: style.css
site/assets/js/: app.js
training/: README.md  requirements.txt  setup.sh
training/config/: config.ini
training/scripts/: 01_setup_environment.bat  02_extract_frames.bat  03_validate_dataset.bat  04_train_adaptive.bat  05_train_manual.bat  06_export_ncnn.bat  07_run_full_pipeline.bat
training/src/: check_model_contract.py  download_base_model.py  export_to_ncnn.py  extract_frames.py  pipeline_common.py  preflight_check.py  run_pipeline.py  train.py  training_config.py  validate_dataset.py
